clusters/talos-cluster/search/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: search
  labels:
    pod-security.kubernetes.io/enforce: privileged
