clusters/talos-cluster/search/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng-deployment
  namespace: search
  labels:
    app: searxng-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: searxng-deployment
  template:
    metadata:
      name: searxng-deployment
      labels:
        app: searxng-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: searxng
          image: searxng/searxng:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: searxng
              protocol: TCP
          volumeMounts:
            - name: searxng-config
              mountPath: /etc/searxng
      volumes:
        - name: searxng-config
          persistentVolumeClaim:
            claimName: searxng-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: search
  labels:
    app: backend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      name: backend-deployment
      labels:
        app: backend-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: backend
          image: itzcrazykns1337/perplexica-backend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: backend
              protocol: TCP
          volumeMounts:
            - name: backend-dbstore
              mountPath: /home/perplexica/data
            - name: uploads
              mountPath: /home/perplexica/uploads
            - name: config
              mountPath: /home/perplexica/config.toml
              subPath: config.toml
      volumes:
        - name: backend-dbstore
          persistentVolumeClaim:
            claimName: backend-data
        - name: uploads
          persistentVolumeClaim:
            claimName: backend-media
        - name: config
          configMap:
            name: perplexica-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: search
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      name: frontend-deployment
      labels:
        app: frontend-deployment
    spec:
      restartPolicy: Always
      containers:
        - name: frontend
          image: itzcrazykns1337/perplexica-frontend:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: frontend
              protocol: TCP
