clusters/talos-cluster/search/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  namespace: search
spec:
  selector:
    app: searxng-deployment
  ports:
    - name: searxng
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: search
spec:
  selector:
    app: backend-deployment
  ports:
    - name: backend
      protocol: TCP
      port: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: search
spec:
  selector:
    app: frontend-deployment
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
